Define algorithm to compute linear regression weights

--- a/mini-project-2/src/mini-project-2.ipynb
+++ b/mini-project-2/src/mini-project-2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,7 @@
     "sys.path.append('./assets/')\n",
     "from miniprojectone import get_data_points, k_means, get_codebooks\n",
     "\n",
+    "TOTAL_DIGIT_CLASSES = 10\n",
     "\n",
     "# START: Helper functions\n",
     "def load_data(one_hot_encoding=None):\n",
@@ -66,7 +67,7 @@
     "        return dataframe\n",
     "    return inject_label(dataframe, one_hot_encoding)\n",
     "\n",
-    "def one_hot_encode(ith, k=10):\n",
+    "def one_hot_encode(ith, k=TOTAL_DIGIT_CLASSES):\n",
     "    \"\"\" Apply one-hot encoding technique for a k-dimensional vector\n",
     "        \n",
     "        This function is intended to work like a lightweight version one-hot-encoder.\n",
@@ -97,7 +98,7 @@
     "def inject_label(dataset, one_hot_encoding=False):\n",
     "    \"\"\" Inject into data frame class labels as numbered or one-hot encoded \n",
     "    \"\"\"\n",
-    "    dataframe, k_class = [], 10\n",
+    "    dataframe, k_class = [], TOTAL_DIGIT_CLASSES\n",
     "    digits = np.array_split(dataset, k_class) # split into 10 arrays\n",
     "    for i in range(k_class):\n",
     "        digit =  digits[i] # n-obs x k-dim\n",
@@ -146,13 +147,39 @@
     "    for point in dataset:\n",
     "        # compute distance between data point and centroid \n",
     "        feature = [np.linalg.norm(point - c) for c in codebooks]\n",
+    "        feature.append(1) # padded with a trailing 1 \n",
     "        features.append( np.array(feature) )\n",
     "    \n",
     "    return np.array(features)\n",
     "\n",
-    "def linear_regressor(alpha=0):\n",
-    "    weights = []\n",
-    "    return weights\n",
+    "def compute_linreg(dataframe, alpha=0):\n",
+    "    \"\"\" Algorithm to compute weights of the matrix W that solves the linear regression\n",
+    "    \n",
+    "    Data: Given m-dimensional feature vectors (fi) and k-dimensional target vectors (zi)\n",
+    "    Result: a kxm-dimensional weight matrix Wopt that solves the linear regression\n",
+    "    \n",
+    "    1) Sort the feature vectors row-wise into an Nxm matrix (Phi) and the targets into an\n",
+    "    Nxk matrix (Z)\n",
+    "    2) Compute the pseudo inverse of Phi x Zi as the Wopt transposed.\n",
+    "    \n",
+    "    The pseudo-inverse of a matrix A, denoted A^+, is defined as: “the matrix that ‘solves’ \n",
+    "    [the least-squares problem] Ax = b,” i.e., if x is said solution, then A^+ is \n",
+    "    that matrix such that x = A^+b.\n",
+    "    \n",
+    "    ref: \n",
+    "        https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.pinv.html\n",
+    "        https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html\n",
+    "        https://docs.scipy.org/doc/numpy/reference/generated/numpy.identity.html\n",
+    "    \"\"\"\n",
+    "    k_class = TOTAL_DIGIT_CLASSES\n",
+    "    \n",
+    "    # Sort row-wise Phi and Zi\n",
+    "    Phi, Zi = dataframe[:, :-k_class], dataframe[:, -k_class:]\n",
+    "    # compute rigde regression factor \n",
+    "    ridge_factor = alpha * np.identity(Phi.shape[1]) # Imxm identity matrix\n",
+    "    # compute pseudo inverse of Phi x Zi\n",
+    "    Wopt = np.linalg.inv(np.dot(Phi.T, Phi) + ridge_factor).dot(Phi.T).dot(Zi)\n",
+    "    return Wopt.T\n",
     "\n",
     "# END: Helper functions"
    ]
@@ -169,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -200,20 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2000, 240) (1000, 19)\n"
+      "(2000, 240) (1000, 20)\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "        \n",
     "raw_dataframe = load_data()\n",
     "raw_training_data, raw_testing_data = split_data(raw_dataframe)\n",
     "\n",
@@ -223,16 +248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1000, 29)"
+       "(1000, 30)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,6 +275,51 @@
     "\n",
     "Let's compute the linear regression weights with a trailing 1 as bias\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 20)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights = compute_linreg(features_labels)\n",
+    "weights.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.46895862e-03,  2.43724340e-03,  1.18749601e-03,  8.05409730e-03,\n",
+       "       -4.82207723e-04, -9.93111543e-03, -3.14763045e-03,  4.28814248e-03,\n",
+       "        6.33789668e-03,  2.10090947e-03,  4.32839405e-03,  1.09031053e-02,\n",
+       "       -4.41277088e-03, -1.41596922e-03,  4.31434001e-03, -5.06864720e-03,\n",
+       "       -4.39785331e-03, -9.38253439e-04,  2.09392266e-03, -7.70370876e-01])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights[0]"
    ]
   }
  ],
