Add documentation for the scripts

--- a/mini-project-2/src/mini-project-2.ipynb
+++ b/mini-project-2/src/mini-project-2.ipynb
@@ -48,67 +48,111 @@
     "sys.path.append('./assets/')\n",
     "from miniprojectone import get_data_points, k_means, get_codebooks, assign_randomly\n",
     "\n",
+    "\n",
+    "# START: Scripts\n",
     "TOTAL_DIGIT_CLASSES = 10\n",
     "\n",
-    "# START: Helper functions\n",
+    "# Helper functions\n",
+    "# The set of helpers defined below ease up the procedure for creating\n",
+    "# the data processing pipeline.\n",
+    "\n",
     "def load_data(one_hot_encoding=None):\n",
-    "    \"\"\" Load the data and parse (if specified, one-hot encoding) numbered \n",
-    "        class labels.\n",
+    "    \"\"\" Load the full dataset with or without labelling the output\n",
+    "    \n",
+    "    This function relies on the existing `get_data_points()` function\n",
+    "    from `miniprojectone.py` to read the data from the text file\n",
+    "    `mfeat.info`.\n",
+    "    By specifying the `one_hot_encoding` boolean parameter, the data\n",
+    "    is loaded with injected labels that is numbered from 1-10,\n",
+    "    if False, and 10-dimensional one-hot encoded values.\n",
+    "    \n",
+    "    Read more in the :ref:`../assets/miniprojectone.py`.\n",
     "        \n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        one_hot_encoding: bool, None\n",
-    "            determine whether one-hot encoding should be used or not\n",
-    "            \n",
-    "        Returns\n",
-    "        -------\n",
-    "        dataframe: array-like (n_samples, m_features)\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    one_hot_encoding: bool, default = None\n",
+    "        determine whether labeling the output should be used or not,\n",
+    "        and if yes, labeled as numbered values or one-hot encoding \n",
+    "        values.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    dataframe: array-like (N_samples, m_features)\n",
+    "        the entire digit dataset of 2000 observations by 240 and \n",
+    "        injected labels.\n",
     "    \"\"\"\n",
-    "    # load data frame with no class labels defined\n",
-    "    dataframe = get_data_points()\n",
+    "    dataframe = get_data_points() # load non-labeled data frame\n",
+    "    \n",
     "    if one_hot_encoding is None:\n",
     "        return dataframe\n",
-    "    return inject_label(dataframe, one_hot_encoding)\n",
+    "    return inject_label(dataframe, one_hot_encoding) # load labeled data frame \n",
+    "\n",
     "\n",
     "def one_hot_encode(ith, k=TOTAL_DIGIT_CLASSES):\n",
     "    \"\"\" Apply one-hot encoding technique for a k-dimensional vector\n",
     "        \n",
-    "        This function is intended to work like a lightweight version one-hot-encoder.\n",
-    "        It is adapted to our specific needs. \n",
-    "        \n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        ith: int\n",
-    "            ith position of the one-of-K discrete label\n",
-    "        \n",
-    "        k: int\n",
-    "            number of k-classes for the encoding vector\n",
-    "            \n",
-    "        Returns\n",
-    "        -------\n",
-    "        encoded: array\n",
-    "            vector with zeros and one in the ith position\n",
+    "    This function is intended to work like a lightweight version \n",
+    "    of one-hot-encoder. It is adapted to this specific situation:\n",
+    "    a vector of k-dimensional zeros and one at the ith position.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    ith: int\n",
+    "        the ith position of the one-of-K discrete label. The `ith`\n",
+    "        position must be expressed in a human readable way, so\n",
+    "        to solve indexing ambiguity with array. That is, array\n",
+    "        indices go from 0 to the array's length - 1, but here `ith`\n",
+    "        goes from 1 to array's length. For instance, indexing the \n",
+    "        3rd position of an array A is, A[2], whereas the ith position\n",
+    "        of the encoded vector is 3.\n",
+    "\n",
+    "    k: int, default = 10\n",
+    "        number of k-classes for the encoding vector\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    encoded: 1D-array\n",
+    "        vector with zeros and one in the ith position\n",
     "    \"\"\"\n",
     "    if ith > k:\n",
     "        ith = k # avoid out of bound exception\n",
     "        \n",
-    "    index = ith - 1\n",
-    "    encoded = np.zeros(k)\n",
-    "    encoded[index] = 1\n",
+    "    index = ith - 1 # index it as array\n",
+    "    encoded = np.zeros(k) # k-sized of zero vectors\n",
+    "    encoded[index] = 1 # modify the position\n",
     "    return encoded\n",
     "\n",
     "\n",
     "def inject_label(dataset, one_hot_encoding=False):\n",
-    "    \"\"\" Inject into data frame class labels as numbered or one-hot encoded \n",
+    "    \"\"\" Inject numbered or one-hot encoded class labels into a dataset\n",
+    "    \n",
+    "    It should be noted that, due to special requirements of the project,\n",
+    "    the class labels for the digits 1-9, are mapped to 1-9 numbers, and 0 \n",
+    "    to 10.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    dataset: 2D-array shape: (N_samples, m_features)\n",
+    "        a dataset of 10-dimensional features \n",
+    "\n",
+    "    one_hot_encoding: bool\n",
+    "        determine whether labeling the output as numbered values or \n",
+    "        one-hot encoding values.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    dataframe: 2D-array shape (N_samples, m_features)\n",
+    "        the m-feature augmented dataset.\n",
     "    \"\"\"\n",
     "    dataframe, k_class = [], TOTAL_DIGIT_CLASSES\n",
     "    digits = np.array_split(dataset, k_class) # split into 10 arrays\n",
     "    for i in range(k_class):\n",
-    "        digit =  digits[i] # n-obs x k-dim\n",
+    "        digit =  digits[i]\n",
     "        if i == 0: \n",
     "            i = 10 # define \"0\" as class 10\n",
     "        encoded = one_hot_encode(i) if one_hot_encoding else i\n",
     "        \n",
+    "        # insert this encoded label to each point\n",
     "        for point in digit:\n",
     "            dataframe.append( np.insert(point, len(point), encoded) )\n",
     "            \n",
@@ -118,23 +162,31 @@
     "def split_data(dataframe):\n",
     "    \"\"\" Split data frame into training and testing data\n",
     "    \n",
+    "    The splitting logic is simple here since we know the data\n",
+    "    structure of the data frame. The function simply assembles the\n",
+    "    first 100 samples of each digit of 10 as training data, and \n",
+    "    the rest as testing data.\n",
+    "    \n",
     "    Parameters\n",
     "    ----------\n",
-    "    dataframe: array-like (n_samples, m_features)\n",
-    "        2000 digit patterns x 240 features and 10 one-hot encoded class labels\n",
+    "    dataframe: array-like (N_samples, m_features)\n",
+    "        2000 digit patterns by k-features\n",
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    encoded: list\n",
+    "    splits: list, shape(2, 2D-array data)\n",
     "        list containing array of training and array of testing data\n",
     "    \"\"\"\n",
-    "    digits = np.array_split(dataframe, 10)\n",
+    "    nbr_digits = 10\n",
+    "    range_size = 100\n",
+    "    digits = np.array_split(dataframe, nbr_digits)\n",
     "    \n",
     "    train_data, test_data = [], []\n",
     "\n",
+    "    # `extend()` iterates over the array and appends each element to the list\n",
     "    for digit in digits:\n",
-    "        train_data.extend(digit[:100])\n",
-    "        test_data.extend(digit[100:])\n",
+    "        train_data.extend(digit[:range_size])\n",
+    "        test_data.extend(digit[range_size:])\n",
     "    \n",
     "    return [np.array(train_data), np.array(test_data)]\n",
     "\n",
@@ -142,9 +194,26 @@
     "def select_features(dataset, codebooks):\n",
     "    \"\"\" Apply Euclidean distance between k-means centroid and each point\n",
     "    to extract k features.\n",
+    "    \n",
+    "    The feature extraction happens by calculating the Euclidean distance \n",
+    "    between the data points xi and the codebook vectors ci and assigning \n",
+    "    each distance as a new feature.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    dataset: 2D-array shape: (N_samples, m_features)\n",
+    "\n",
+    "    codebooks: 2D-array shape: (k_codebooks, m_features)\n",
+    "        K-sized applied K-means-clustering centroids\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    features: 2D-array shape (N_samples, k_features + 1)\n",
+    "        the extracted features with an additional padding value.\n",
     "    \"\"\"\n",
     "    features = []\n",
-    "    # transfrom xi -> fi by reducing dimensionality from n to k features\n",
+    "    \n",
+    "    # transfrom xi -> fi by reducing dimensionality from N to k features\n",
     "    for point in dataset:\n",
     "        # compute distance between data point and centroid \n",
     "        feature = [np.linalg.norm(point - c) for c in codebooks]\n",
@@ -153,8 +222,9 @@
     "    \n",
     "    return np.array(features)\n",
     "\n",
-    "def compute_linreg(Phi, Zi, alpha=0):\n",
-    "    \"\"\" Algorithm to compute weights of the matrix W that solves the linear regression\n",
+    "\n",
+    "def compute_linreg(Phi, Zi, alpha=0.0):\n",
+    "    \"\"\" Compute the weights of the matrix Wopt that solves the linear regression\n",
     "    \n",
     "    Data: Given m-dimensional feature vectors (fi) and k-dimensional target vectors (zi)\n",
     "    Result: a kxm-dimensional weight matrix Wopt that solves the linear regression\n",
@@ -167,10 +237,26 @@
     "    [the least-squares problem] Ax = b,” i.e., if x is said solution, then A^+ is \n",
     "    that matrix such that x = A^+b.\n",
     "    \n",
-    "    ref: \n",
+    "    Read more in the:ref: \n",
     "        https://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.pinv.html\n",
     "        https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html\n",
     "        https://docs.scipy.org/doc/numpy/reference/generated/numpy.identity.html\n",
+    "        \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    Phi: 2D-array shape: (N_samples, m_features)\n",
+    "        the inputs (Xi) of the data sample\n",
+    "    \n",
+    "    Zi: 2D-array shape: (N_samples, k_features)\n",
+    "        the outputs (Yi) of the data sample\n",
+    "\n",
+    "    alpha: float, default = 0.0\n",
+    "        the ridge factor \n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    Wopt: 2D-array shape (k_values, m_values)\n",
+    "        the optimal weight matrix that solves the linear regression\n",
     "    \"\"\"\n",
     "    # compute rigde regression factor \n",
     "    ridge_factor = alpha * np.identity(Phi.shape[1]) # Imxm identity matrix\n",
@@ -180,8 +266,22 @@
     "\n",
     "\n",
     "def check_accuracy(Y_ground, Y_pred):\n",
-    "    # Y_ground and Y_pred are N by k matrices\n",
+    "    \"\"\" Compute model accuracy by assessing the results (predicted) \n",
+    "    against the ground truth values\n",
     "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    Y_ground: 2D-array shape: (N_values, k_values)\n",
+    "        the true values the class labels\n",
+    "    \n",
+    "    Y_pred: 2D-array shape: (N_values, k_values)\n",
+    "        the predicted values using the trained model\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    accuracy: float\n",
+    "        the accuracy rate between the true and predicted values\n",
+    "    \"\"\"\n",
     "    ground_labels = np.argmax(Y_ground, axis=1) # N-dimensional vector with the ground labels\n",
     "    predicted_labels = np.argmax(Y_pred, axis=1) # N-dimensional vector with the highest probability position\n",
     "    \n",
@@ -192,8 +292,22 @@
     "\n",
     "\n",
     "def check_MSE(Y_ground, Y_pred):\n",
-    "    # Y_ground and Y_pred are N by k matrices\n",
+    "    \"\"\" Compute the Mean Squared Error(MSE) by assessing the results \n",
+    "    (predicted) against the ground truth\n",
     "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    Y_ground: 2D-array shape: (N_values, k_values)\n",
+    "        the true values the class labels\n",
+    "    \n",
+    "    Y_pred: 2D-array shape: (N_values, k_values)\n",
+    "        the predicted values using the trained model\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    MSE: float\n",
+    "        the mean squared error given the true and predicted values\n",
+    "    \"\"\"\n",
     "    Y_norm = np.linalg.norm(Y_ground - Y_pred, axis=1) # N-dimensional vector with the norms\n",
     "    MSE = np.square(Y_norm).mean()\n",
     "    \n",
@@ -201,15 +315,61 @@
     "\n",
     "\n",
     "def predict_hypothesis_matrix(model, X):\n",
+    "    \"\"\" Compute the hypothesis matrix using the linear combination of \n",
+    "    the optimal weights matrix (model) and the training inputs (Xi)\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    model: sparse matrix (k_values, m_values)\n",
+    "        the optimal weight matrix that solves the linear regression\n",
+    "    \n",
+    "    X: 2D-array shape (N_values, m_values)\n",
+    "        the training inputs (Xi) of the data sample\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    hypothesis_matrix: sparse matrix (N_values, k_values)\n",
+    "        the matrix form of the predicted values for the given X\n",
+    "    \"\"\"\n",
     "    hypothesis_matrix = model@X.T # result in a k by N matrix\n",
     "    return hypothesis_matrix.T # return N by k hypothesis matrix\n",
     "\n",
     "\n",
     "def k_fold_cv(dataset, nbr_folds=5, k=10, alpha=0.0):\n",
-    "    # copy the data and shuffle it\n",
+    "    \"\"\" Compute the k-fold cross-validation over a given dataset\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    dataset: 2D-array shape (N_samples, m_features)\n",
+    "        the data sample containing both input patterns and output labels\n",
+    "    \n",
+    "    nbr_folds: int, default = 5\n",
+    "        the number of folds for the cross-validation\n",
+    "        \n",
+    "    k: int, default = 10\n",
+    "        the number of clusters using K-means clustering\n",
+    "        \n",
+    "    alpha: float, default = 0.0\n",
+    "        the ridge factor for the ridge regression computation\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    cv_accuracy_train: float\n",
+    "        the overall accuracy rate for the folds on the training data\n",
+    "        \n",
+    "    cv_accuracy_test: float\n",
+    "        the overall accuracy rate for the folds on the testing data\n",
+    "    \n",
+    "    cv_MSE_train: float\n",
+    "        the overall mean squared error for the folds on the training data\n",
+    "        \n",
+    "    cv_MSE_test: float\n",
+    "        the overall mean squared error for the folds on the test data\n",
+    "    \"\"\"\n",
+    "    # copy the data to avoid affecting reference\n",
     "    data = dataset.copy()\n",
     "    \n",
-    "    # divide into k-groups\n",
+    "    # divide into k-folds\n",
     "    folds = assign_randomly(data, nbr_folds)\n",
     "    \n",
     "    accuracy_train, accuracy_test = [], []\n",
@@ -217,9 +377,8 @@
     "    \n",
     "    # train models for the folds\n",
     "    for i in range(nbr_folds):\n",
-    "#         print(\"Processing fold {}\".format(i))\n",
     "        \n",
-    "        # distribute train and test data\n",
+    "        # distribute into train and test data\n",
     "        test_data, train_data = folds[i], []\n",
     "        for j in range(nbr_folds):\n",
     "            if i != j:\n",
@@ -228,7 +387,7 @@
     "        train_data = np.array(train_data)\n",
     "        test_data = np.array(test_data)\n",
     "                \n",
-    "        # separate X (inputs) and Y (labels) for training and testing data\n",
+    "        # separate X (inputs) and Y (labels) for the training and testing data\n",
     "        x_train, y_train = train_data[:, :-TOTAL_DIGIT_CLASSES], train_data[:, -TOTAL_DIGIT_CLASSES:]\n",
     "        x_test, y_test = test_data[:, :-TOTAL_DIGIT_CLASSES], test_data[:, -TOTAL_DIGIT_CLASSES:]\n",
     "        \n",
@@ -265,10 +424,10 @@
     "        MSE_train.append(_MSE_train)\n",
     "        MSE_test.append(_MSE_test)\n",
     "        \n",
-    "        cv_accuracy_train = np.mean(accuracy_train)\n",
-    "        cv_accuracy_test = np.mean(accuracy_test)\n",
-    "        cv_MSE_train = np.mean(MSE_train)\n",
-    "        cv_MSE_test = np.mean(MSE_test)\n",
+    "    cv_accuracy_train = np.mean(accuracy_train)\n",
+    "    cv_accuracy_test = np.mean(accuracy_test)\n",
+    "    cv_MSE_train = np.mean(MSE_train)\n",
+    "    cv_MSE_test = np.mean(MSE_test)\n",
     "        \n",
     "    return cv_accuracy_train, cv_accuracy_test, cv_MSE_train, cv_MSE_test"
    ]
@@ -1279,7 +1438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
