Add standalone file

--- a/mini-project-2/src/mini-project-2-final.ipynb
+++ b/mini-project-2/src/mini-project-2-final.ipynb
@@ -272,7 +272,9 @@
     "    -------\n",
     "    X_reduced: 2D-array shape: (N_samples, m_components)\n",
     "    \"\"\"\n",
-    "    return (U.T@X_bar.T).T\n",
+    "    X_reduced = (U.T@X_bar.T).T\n",
+    "    X_reduced = np.insert(X_reduced, X_reduced.shape[1], 1, axis=1) # append bias 1 as the last feature\n",
+    "    return X_reduced\n",
     "\n",
     "\n",
     "def select_min_dist_cluster(dataset):\n",
